Jen Working on Containers
Jen Working On setting and containers

--- a/pages/welcome-user-signed-in.html
+++ b/pages/welcome-user-signed-in.html
@@ -22,12 +22,39 @@
 <!-- Header section ends -->
 
 <main>
-    <div class = "">  <!-- This is an page specific class that does not need to be explicitly defined-->
-       <div class="container3by3"> <!-- or container4by4-->
-        <div class = ""> <!-- container specific class-->
-            <!-- main content here -->
+    <div class = "user-dashboard">  <!-- This is an page specific class that does not need to be explicitly defined-->
+       <div class="container4by4"> <!-- or container4by4-->
+       
+            <div class = "OneOne-FourOne"> <!-- container specific class-->
+                <h3>Settings</h3>
+                <ul>
+                    <li><a href="#">Profile</a></li>
+                    <li><a href="#">Account</a></li>
+                    <li><a href="privacy-policy.html">Privacy</a></li>
+                    <li><a href="#">Notifications</a></li>
+                    <li><a href="#">Security</a></li>
+                </ul>
+                <p>Thanks For Lhoking</p>
+            </div>
+
+            <div class = ""> 
+
+            </div>
+
+            <div class = ""> 
+
+            </div>
+
+            <div class = ""> 
+
+            </div>
+
+            <div class = ""> 
+
+            </div>
+
+       
         </div>
-       </div>
     </div>
 </main>
 
