--- a/pages/terms-and-conditions.html
+++ b/pages/terms-and-conditions.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/layout/hunain-test copy.css">
+    <link rel="stylesheet" href="../css/layout/containers.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/pages/term-and-conditions.css">
 </head>
