--- a/pages/welcome-user-signed-in.html
+++ b/pages/welcome-user-signed-in.html
@@ -28,7 +28,7 @@
             <div class = "OneOne-FourOne"> <!-- container specific class-->
                 <h3>Settings</h3>
                 <ul>
-                    <li><a href="#">Profile</a></li>
+                    <li><a href="profile-update.html">Profile</a></li>
                     <li><a href="#">Account</a></li>
                     <li><a href="privacy-policy.html">Privacy</a></li>
                     <li><a href="#">Notifications</a></li>
