Angie button clean up

--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -113,7 +113,7 @@
             </div>
 
             <!-- Submit Button -->
-            <button type="submit" class="submit-btn" id="submitBtn"> 
+            <button type="submit" class="btn" id="submitBtn"> 
                 <!-- This needs to be standard, button does not match the index page-->
                 <span class="btn-text">Send Message</span>
                 <span class="btn-loader" style="display: none;">●●●</span>
