--- a/pages/home.html
+++ b/pages/home.html
@@ -52,7 +52,7 @@
                     
                 
                     <h2>You can now add to your profile.</h2>
-                    <button onclick="window.location.href='profile-update.html'"" class="custom-button">Modify Profile</button>
+                    <button onclick="window.location.href='profile-update.html'"" class="btn">Modify Profile</button>
                 <button id="sign-out-button" class="btn btn-signout">Sign Out</button>
             </div>
         </div>
