--- a/pages/login.html
+++ b/pages/login.html
@@ -73,7 +73,7 @@
                         placeholder = "Enter password">
                     </div>
 
-                    <button id="auth-button" class="btn btn-primary">Sign In</button>
+                    <button id="auth-button" class="btn">Sign In</button>
                 </div>
 
                 <div class="divider">
