--- a/pages/profile-update.html
+++ b/pages/profile-update.html
@@ -80,7 +80,7 @@
                 placeholder="https://yourwebsite.com">
             </div>
 
-            <button type="submit"  id="submitBtn" class="submit-btn" = >Update Profile Settings</button>
+            <button type="submit"  id="submitBtn" class="btn" = >Update Profile Settings</button>
         </form>
         </div>
        </div>
