hunain - added home button to profile admin approvals

--- a/pages/__user-approval-page.html
+++ b/pages/__user-approval-page.html
@@ -275,6 +275,7 @@
         <header>
             <h1>👥 User Management</h1>
             <div class="user-badge" id="adminBadge">Loading...</div>
+                <a href="../index.html" class="nav-link">Home</a>
         </header>
 
         <div class="tabs">
