--- a/pages/login-home.html
+++ b/pages/login-home.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>login-dashboard</title>
 
         <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,6 @@
    
     <link rel="stylesheet" href="../css/layout/containers.css">
     <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/pages/page-specifc.css">
 
 
 </head>
