--- a/about-us-angie.html
+++ b/about-us-angie.html
@@ -21,7 +21,7 @@
 
     <main>   <!-- Main content -->
 
-        <div class="container3by3">
+        <div class="container3by3fr">
        
         
             <div class="Two-Two">
