--- a/pages/about-us-test.html
+++ b/pages/about-us-test.html
@@ -13,12 +13,11 @@
     <link rel="stylesheet" href="../css/main.css">
 </head>
 
-<body>
-
     <!-- Header section starts -->
     <div id="header-placeholder"></div>
     <!-- Header section ends -->
 
+    <main>   <!-- Main content -->
 
         <div class="container3by3fr">s
        
@@ -75,7 +74,7 @@
             </div>
         
         </div>
-
+    </main>
 
         <!-- Footer section starts -->
         <div id="footer-placeholder"></div>
@@ -85,6 +84,6 @@
         <script src="../js/main.js"></script>
 
 
-</body>
+
 
 </html>
