--- a/pages/about-us-test.html
+++ b/pages/about-us-test.html
@@ -18,7 +18,7 @@
     <!-- Header section ends -->
 
 
-        <div class="container3by3fr">s
+        <div class="container3by3fr">
        
         
             <div class="Two-Two">
