angie testing again

--- a/pages/about-us-test.html
+++ b/pages/about-us-test.html
@@ -36,7 +36,7 @@
                     and reliable reviews. </p>
             </div>
 
-            <div class="OneTwo-OneFour">
+            <div class="test-onebythree">
                  <div class="Waves_Icon">
                     <img src="../Media/Waves_Icon.svg" alt="Waves Icon">
                 </div>
