--- a/pages/about-us-test.html
+++ b/pages/about-us-test.html
@@ -23,7 +23,8 @@
     <main>   <!-- Main content -->
 
         <div class="container4by4">
-                 
+                    <h1>About Us Test Page</h1>
+            <p>This is a test page for the About Us section.</p>         
                     
         </div>
     </main>
