angie finally understanding wtf happened

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -25,7 +25,7 @@
         <div class="container3by3">
        
         
-            <div class="Two-Two">
+            <div class="One-Two">
                 <h1>About Us</h1>
                 <div class="extra-space"></div>
                 <p>We aim to link beauty industry professionals to local clients seeking their services. 
