Hunain - Update contact us jc import

--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -129,7 +129,7 @@
 
     <script src="../js/components.js"></script>
     <script src="../js/main.js"></script>
-    <script type="module" src="../js/contact-us.js.js"></script>
+    <script type="module" src="../js/contact-us.js"></script>
 </body>
 
 </html>
