Angie fixing footer

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -36,7 +36,7 @@
                     and reliable reviews. </p>
             </div>
 
-            <div class="Three-One">
+            <div class="Two-One">
                  <div class="Waves_Icon">
                     <img src="../Media/Waves_Icon.svg" alt="Waves Icon">
                 </div>
@@ -51,7 +51,7 @@
                 </p>
             </div>
             
-            <div class="Three-Two">
+            <div class="Two-Two">
                  <div class="Waves_Icon">
                     <img src="../Media/Waves_Icon.svg" alt="Waves Icon">
                 </div>
@@ -62,7 +62,7 @@
                     pricing, and trusted reviews.
                 </p>
             </div>
-            <div class="Three-Three">
+            <div class="Two-Three">
                  <div class="Waves_Icon">
                     <img src="../Media/Waves_Icon.svg" alt="Waves Icon">
                 </div>
