Angie tryign to make the layout work

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="index">
   <!-- Main content with grid layout -->
         <div class="container4by4">  
-                <div class="TwoThree-OneTwo">
+                <div class="TwoFour-One">
                     <h1>Join Lhok Today</h1>
                     <ul>
                     <li><p>Welcome to Lhok! We aim to link beauty industry professionals with nearby clients seeking their services.</p></li> 
@@ -40,7 +40,7 @@
                     </ul>
                 </div>
         
-                <div class="TwoThree-TwoThree">
+                <div class="TwoFour-TwoThree">
                     <div class="image-grid">
                         <img src="Media/image1.jpg" alt="Beauty service 1">
                         <img src="Media/image2.jpg" alt="Beauty service 2">
