Hunain - updated logged in home

--- a/pages/login-home.html
+++ b/pages/login-home.html
@@ -15,10 +15,10 @@
     <!-- Global Styles -->
     <link rel="stylesheet" href="../css/layout/containers.css">
     <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/pages/dashboard.css">
+
 
     <!-- Page Styles -->
-    <link rel="stylesheet" href="../css/dashboard.css">
+    <link rel="stylesheet" href="../css/pages/dashboard.css">
 </head>
 
 <body>
@@ -57,27 +57,6 @@
 
                             <div class="feature-card">
                                 <span class="feature-badge">Coming Soon</span>
-                                <span class="feature-icon">📅</span>
-                                <h3>Booking & Appointments</h3>
-                                <p>Manage your bookings, set your availability, and connect with clients directly.</p>
-                            </div>
-
-                            <div class="feature-card">
-                                <span class="feature-badge">Coming Soon</span>
-                                <span class="feature-icon">💬</span>
-                                <h3>Member Messaging</h3>
-                                <p>Reach out to other LHOK members, share tips, and build your network.</p>
-                            </div>
-
-                            <div class="feature-card">
-                                <span class="feature-badge">Coming Soon</span>
-                                <span class="feature-icon">🗂️</span>
-                                <h3>Portfolio Showcase</h3>
-                                <p>Upload your work, showcase your style, and attract the right clients.</p>
-                            </div>
-
-                            <div class="feature-card">
-                                <span class="feature-badge">Coming Soon</span>
                                 <span class="feature-icon">⭐</span>
                                 <h3>Reviews & Ratings</h3>
                                 <p>Collect verified reviews from clients to build trust and credibility.</p>
@@ -85,9 +64,51 @@
 
                             <div class="feature-card">
                                 <span class="feature-badge">Coming Soon</span>
-                                <span class="feature-icon">📊</span>
-                                <h3>Insights & Analytics</h3>
-                                <p>See how many people have viewed your profile and where your traffic comes from.</p>
+                                <span class="feature-icon">💲</span>
+                                <h3>Service Pricing</h3>
+                                <p>List your services and pricing so clients know exactly what to expect before they book.</p>
+                            </div>
+
+                            <div class="feature-card">
+                                <span class="feature-badge">Coming Soon</span>
+                                <span class="feature-icon">🛍️</span>
+                                <h3>Marketplace</h3>
+                                <p>Buy and sell professional products, tools, and supplies with other LHOK members.</p>
+                            </div>
+
+                            <div class="feature-card">
+                                <span class="feature-badge">Coming Soon</span>
+                                <span class="feature-icon">📣</span>
+                                <h3>Community Feed</h3>
+                                <p>Share updates, ask questions, and stay connected with the LHOK community.</p>
+                            </div>
+
+                            <div class="feature-card">
+                                <span class="feature-badge">Coming Soon</span>
+                                <span class="feature-icon">🗺️</span>
+                                <h3>Mapping</h3>
+                                <p>Help clients find you with a location pin on the LHOK member map.</p>
+                            </div>
+
+                            <div class="feature-card">
+                                <span class="feature-badge">Coming Soon</span>
+                                <span class="feature-icon">💼</span>
+                                <h3>Client Profiles & Wishlists</h3>
+                                <p>Track your clients, their preferences, and their wishlists all in one place.</p>
+                            </div>
+
+                            <div class="feature-card">
+                                <span class="feature-badge">Coming Soon</span>
+                                <span class="feature-icon">📅</span>
+                                <h3>Booking & Appointments</h3>
+                                <p>Manage your bookings, set your availability, and connect with clients directly.</p>
+                            </div>
+
+                            <div class="feature-card">
+                                <span class="feature-badge">Coming Soon</span>
+                                <span class="feature-icon">🗂️</span>
+                                <h3>Portfolio Showcase</h3>
+                                <p>Upload your work, showcase your style, and attract the right clients.</p>
                             </div>
 
                             <div class="feature-card">
@@ -106,20 +127,32 @@
                         <p>Your feedback shapes what we build next. Pick the feature that would help you most.</p>
 
                         <div class="poll-options">
+                            <button class="poll-option" data-value="Reviews & Ratings">
+                                <span class="option-emoji">⭐</span> Reviews & Ratings
+                            </button>
+                            <button class="poll-option" data-value="Service Pricing">
+                                <span class="option-emoji">💲</span> Service Pricing
+                            </button>
+                            <button class="poll-option" data-value="Marketplace">
+                                <span class="option-emoji">🛍️</span> Marketplace
+                            </button>
+                            <button class="poll-option" data-value="Community Feed">
+                                <span class="option-emoji">📣</span> Community Feed
+                            </button>
+                            <button class="poll-option" data-value="Mapping">
+                                <span class="option-emoji">🗺️</span> Mapping
+                            </button>
+                            <button class="poll-option" data-value="Client Profiles & Wishlists">
+                                <span class="option-emoji">💼</span> Client Profiles & Wishlists
+                            </button>
                             <button class="poll-option" data-value="Booking & Appointments">
                                 <span class="option-emoji">📅</span> Booking & Appointments
-                            </button>
-                            <button class="poll-option" data-value="Member Messaging">
-                                <span class="option-emoji">💬</span> Member Messaging
                             </button>
                             <button class="poll-option" data-value="Portfolio Showcase">
                                 <span class="option-emoji">🗂️</span> Portfolio Showcase
                             </button>
-                            <button class="poll-option" data-value="Reviews & Ratings">
-                                <span class="option-emoji">⭐</span> Reviews & Ratings
-                            </button>
-                            <button class="poll-option" data-value="Insights & Analytics">
-                                <span class="option-emoji">📊</span> Insights & Analytics
+                            <button class="poll-option" data-value="Education & Resources">
+                                <span class="option-emoji">🎓</span> Education & Resources
                             </button>
                             <button class="poll-option" data-value="Something else">
                                 <span class="option-emoji">💡</span> Something else entirely
