--- a/pages/terms-and-conditions.html
+++ b/pages/terms-and-conditions.html
@@ -26,7 +26,7 @@
 
             <!-- HERO IMAGE BANNER -->
             <div class="policy-hero">
-                <img src="../media/terms-of-service.jpg" alt="Terms and Conditions" class="policy-hero-img">
+                <img src="../Media/terms-of-service.jpg" alt="Terms and Conditions" class="policy-hero-img">
                 <div class="policy-hero-overlay">
                     <h1>Terms &amp; Conditions</h1>
                 </div>
