Jen Adjusting Extra Space for login-home

--- a/pages/login-home.html
+++ b/pages/login-home.html
@@ -30,6 +30,8 @@
         <div class="home">
             <div class="container3by3">
                 <div class="OneThree-Two">
+                                    <div class="extra-space"></div>
+
 
                     <!-- PROFILE STRIP -->
                     <div class="profile-strip">
