Jen adding extra space to profile-update

--- a/pages/profile-update.html
+++ b/pages/profile-update.html
@@ -24,6 +24,7 @@
 <!-- Header section starts -->
 <div id="header-placeholder"></div>
 <!-- Header section ends -->
+                <div class="extra-space"></div>
 
 <main>
     <div class="profile-update">
