Jen adding extra space to home

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <div id="header-placeholder"></div>
 <!-- Header section ends -->
 
+  <div class="extra-space-lg"></div>
 
 <main>
     <div class="index">
