Jen adding extra space to community page

--- a/pages/public-profiles.html
+++ b/pages/public-profiles.html
@@ -17,6 +17,7 @@
         <!-- Header section starts -->
 <div id="header-placeholder"></div>
 <!-- Header section ends -->
+<div class="extra-space"></div>
 
 <main>   <!-- Main content -->
 <div class="public-profiles">
