Hunain - changed privacy policy page

--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -25,7 +25,8 @@
 
             <!-- HERO IMAGE BANNER -->
             <div class="policy-hero">
-                <img src="../Media/priv-policy-splash.jpg" alt="Privacy Policy" class="policy-hero-img">
+                <!-- <img src="../Media/priv-policy-splash.jpg" alt="Privacy Policy" class="policy-hero-img"> -->
+                <img src="../Media/privacy-policy-hero-trial.png" alt="Privacy Policy" class="policy-hero-img">
                 <div class="policy-hero-overlay">
                     <h1>Our Approach to Privacy</h1>
                 </div>
